<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Ryan</string>
    <string name="last_name">Lawton</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hi everyone! My name is Ryan.\n I am a Computer Science major at OCC\n and I am a TF for AND101!</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">📸 Photography</string>
    <string name="profile_hobby_second_text">🌱 Gardening</string>
    <string name="profile_hobby_third_text">💻 Building side projects</string>
</resources>